syntax = "proto3";

package enroll_to_product;

import "Messages.proto";

service EnrollToProduct {
  rpc CheckClass(enroll_microservice.CheckClassRequest) returns (enroll_microservice.CheckResponse) {};
  rpc CheckCourse(enroll_microservice.CheckCourseRequest) returns (enroll_microservice.CheckCourseResponse) {};

  rpc GetClassesDetails (enroll_microservice.ClassIdsRequest) returns (enroll_microservice.ClassesDetailsResponse);
  rpc GetCoursesDetails (CourseIdsRequest) returns (CoursesDetailsResponse);
}

message CourseIdsRequest {
  repeated int64 course_ids = 1;
}

message CourseDetailsResponse {
  int64 course_id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  optional string dance_category_name = 5;
  optional string advancement_level_name = 6;
  string course_status = 7;
}

message CoursesDetailsResponse {
  repeated CourseDetailsResponse courses_details = 1;
}